# do-parking-stats-collector

./: .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
docker/: entrypoint.sh
migrations/2024-02-26-180227_parking_info/: down.sql  up.sql
migrations/2024-02-26-181132_create_parking_stats/: down.sql  up.sql
src/: db.rs  main.rs  schema.rs
src/model/: mod.rs  parking_info.rs  parking_stats.rs
