[package]
name = "do-parking-stats-collector"
version = "0.0.1"
edition = "2021"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "2.9.6", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
chrono = { version = "0.4.34", features = ["serde"] }
diesel = { version = "2.1.4", features = ["postgres", "chrono"] }
dotenvy = "0.15.7"

[[bin]]
name = "dpsc"
path = "src/main.rs"
