[package]
name = "do-parking-stats-collector"
version = "0.1.0"
edition = "2021"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
ureq = { version = "2.9.6", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
chrono = { version = "0.4.34", features = ["serde"] }
sea-query = { version = "0.30.7", features = ["backend-postgres", "with-chrono"] }
sea-orm = { version = "0.12.14", features = ["sqlx-postgres", "runtime-async-std-rustls"]}
futures = "0.3.30"

[[bin]]
name = "dpsc"
path = "src/main.rs"
